feat: only 3 sections remaining

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -70,7 +70,7 @@
 
 \input{./sections/contribution.tex}
 
-% \input{./sections/software_architecture.tex}
+\input{./sections/software_architecture.tex}
 
 %\input{./sections/validation.tex}
 
