--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -813,7 +813,7 @@ MModel deployment marks a significant milestone, yet it is not the endpoint in t
 
 Refinements may encompass dynamic adjustments to the model's algorithms, periodic re-evaluations of fairness metrics, and continuous enhancements to the user interface for improved interpretability. This iterative refinement process not only embodies a commitment to continuous improvement but also reinforces the ethical foundation of the fair-by-design framework. Crucially, this iterative approach is designed to incorporate adaptive behavior, ensuring that the model stays aligned with its defined objectives and can dynamically respond to any changes or emerging considerations in the fairness landscape.
 
-\subsection{Discussion}
+\subsubsection{Discussion}
 
 \paragraph{Reflection on Model Deployment}
 
