--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -118,7 +118,12 @@ By adopting a Fair-by-Design approach, stakeholders in AI development, ranging f
 \subsection{Objective Definition}
 \label{subsection:objective}
 
-The first critical step in the Fair-by-Design workflow involves a precise definition of the objectives, laying the groundwork for subsequent fairness considerations. This stage encompasses the identification of protected attributes, the selection of fairness notions, and the choice of an appropriate fairness metric.
+The first critical step in the Fair-by-Design workflow involves a precise definition of the objectives, laying the groundwork for subsequent fairness considerations. This stage encompasses the identification of the goal of the study, the identification of protected attributes, the selection of fairness notions, and the choice of an appropriate fairness metric.
+
+\subsubsection{Goal of the study}
+
+The first target in the Fair-by-Design workflow is related to the identification of the goal of the whole study. It's fundamental to be able to understand whether the study requires a classification approach or a regression.
+
 
 \subsubsection{Protected Attributes}
 
@@ -171,6 +176,7 @@ A fairness metric quantifies the level of fairness achieved by the AI system wit
 \end{itemize}
 
 \subsubsection{Fairness Notions and Metric Alignment}
+\label{subsub:alignment}
 
 The alignment between fairness notions and fairness metrics is a critical aspect of the Fair-by-Design workflow, as it establishes a systematic and measurable framework for evaluating fairness. The following considerations guide the selection process:
 
