--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -72,7 +72,7 @@
 
 \input{./sections/software_architecture.tex}
 
-%\input{./sections/validation.tex}
+\input{./sections/validation.tex}
 
 %\input{./sections/conclusion.tex}
 
